--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -5,7 +5,7 @@ body {
   font-family: 'Roboto', Arial, sans-serif;
   color: #0e0e0e;
   line-height: 1.8;
-  background: url('') no-repeat center center fixed;
+  background: url('backgd1.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -18,6 +18,7 @@ body {
   border-radius: 15px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* Added a larger shadow for depth */
   backdrop-filter: blur(10px); /* Adds a subtle blur effect for elegance */
+  
 }
 
 /* Banner Section */
@@ -45,7 +46,7 @@ body {
   font-size: 42px;
   font-weight: bold;
   color: #fff;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(31, 126, 210, 0.7);
   padding: 15px 30px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
