--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -5,7 +5,7 @@
   padding: 80px 30px 40px; 
   max-width: 100%;
   margin: 0 auto;
-  background: url('IT5.png') no-repeat center center/cover;
+  background: url('backgd2.jpg') no-repeat center center/cover;
   background-attachment: fixed; 
   height: auto; 
   border-radius: 0; 
